Bug 389775 - Spectacle: Icon of "export image...." button has bad visibility
Summary: Spectacle: Icon of "export image...." button has bad visibility
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: Icons (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: visual-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-01 21:24 UTC by Patrick Silva
Modified: 2018-02-01 22:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (95.67 KB, image/jpeg)
2018-02-01 21:24 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-02-01 21:24:48 UTC
Created attachment 110296 [details]
screenshot

set breeze dark theme and press printscreen.
See my screenshot.
Comment 1 andreas 2018-02-01 22:30:22 UTC
Git commit c3f89d5be6a8abe7b75c1259448562a8cc9ecfd8 by andreas kainz.
Committed on 01/02/2018 at 22:30.
Pushed by andreask into branch 'master'.

spectacle use wrong icon

Summary:
spectacle use mimetype icon for an action

Reviewers: ngraham, #spectacle

Reviewed By: ngraham, #spectacle

Subscribers: #spectacle

Differential Revision: https://phabricator.kde.org/D10242

M  +1    -1    src/Gui/ExportMenu.cpp
M  +1    -1    src/Gui/KSMainWindow.cpp

https://commits.kde.org/spectacle/c3f89d5be6a8abe7b75c1259448562a8cc9ecfd8