spectacle use wrong icon

Summary:
spectacle use mimetype icon for an action
BUG: 389775

Reviewers: ngraham, #spectacle

Reviewed By: ngraham, #spectacle

Subscribers: #spectacle

Differential Revision: https://phabricator.kde.org/D10242